@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: tabulate.c,v 1.4 2008/01/25 20:56:12 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: tabulate.c,v 1.5 2008/02/01 21:35:46 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - tabulate.c */
@@ -47,6 +47,7 @@ static char *RCSid() { return RCSid("$Id: tabulate.c,v 1.4 2008/01/25 20:56:12 s
 #include "axis.h"
 #include "graphics.h"
 #include "graph3d.h"
+#include "plot.h"
 #include "plot3d.h"
 #include "tabulate.h"
 
@@ -118,8 +119,12 @@ print_table(struct curve_points *current_plot, int plot_num)
 	case HISTEPS:
 	    break;
 	default:
-	    fprintf(stderr, "Tabular output of plot style %d not fully implemented\n",
-		    current_plot->plot_style);
+	    if (interactive)
+	        fprintf(stderr, "Tabular output of %s plot style not fully implemented\n",
+		    current_plot->plot_style == HISTOGRAMS ? "histograms" :
+		    current_plot->plot_style == IMAGE ? "image" :
+		    current_plot->plot_style == RGBIMAGE ? "rgbimage" :
+		    "this");
 	    break;
 	}
 
